--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 # data manipulation
 ibis-framework[duckdb]==9.5.0
+numpy==2.1.3
 pandas==2.2.3
+matplotlib==3.9.2
+skforecast==0.14.0
+pmdarima==2.0.4
